<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SafeWalk</string>
    <string name="server">Server</string>
    <string name="client">Client</string>
    <string name="submit">Submit</string>
    <string name="match">Match</string>
    <string name="start_over">Start Over</string>
    <string name="default_host">10.0.2.2</string>
    <string name="default_port">8888</string>
    <string name="default_command">:FAKE_COMMAND</string>
    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="partner">Partner</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="from_location">From Location</string>
    <string name="to_location">To Location</string>
    <string name="preferences">Preferences</string>
    <string name="name">Name</string>
    <string name="client_pref_1">Requester</string>
    <string name="client_pref_2">Volunteer</string>
    <string name="client_pref_3">No preference</string>
    <string name="requester">requester</string>
    <string name="volunteer">volunteer</string>
    <string name="no_preference">no preference</string>
    <string name="match_found">Match found</string>
    <string name="error">error</string>
    <string name="prog_update_msg_1">[%1$s] Connected to server at %2$s:%3$s\n</string>
    <string name="prog_update_msg_2">[%1$s] Request sent to server with name %2$s, from %3$s to %4$s, with a prefercence %5$s\n</string>
    <string name="prog_update_msg_3">[%1$s] Something went wrong\n</string>
    <string name="prog_update_msg_4">[%1$s] Response recieved\n</string>
    <string name="prog_update_msg_5">[%1$s] Lost connection\n</string>
    <string name="prog_update_msg_6">[%1$s] Match found, partner is %2$s, going from %3$s to %4$s\n</string>
    <string name="prog_update_msg_7">[%1$s] Valided form data\n</string>
    <string name="prog_update_msg_8">[%1$s] Attempting to connect to server\n</string>
    <string name="err_name_empty">Name cannot be empty</string>
    <string name="err_name_comma">Name cannot contain a comma</string>
    <string name="err_type">If the user uses * as the to location, his or her TYPE must be a volunteer</string>
    <string name="err_host">Host contains space(s)</string>
    <string name="err_port">Port should be an integer value of range [1, 65535] inclusive</string>
    <string-array name="from_locations">
        <item>CL50</item>
        <item>EE</item>
        <item>LWSN</item>
        <item>PMU</item>
        <item>PUSH</item>
    </string-array>
    <string-array name="to_locations">
        <item>CL50</item>
        <item>EE</item>
        <item>LWSN</item>
        <item>PMU</item>
        <item>PUSH</item>
        <item>*</item>
    </string-array>
</resources>